- Fix icon Blurriness

--- a/css/all.css
+++ b/css/all.css
@@ -1033,16 +1033,36 @@ input {
         .footer-wrap-outer .footer-wrap .footer-review-contact {
           margin-top: 1em; } }
       .footer-wrap-outer .footer-wrap .footer-review-contact .footer-review {
-        margin-bottom: 4em; }
+        margin-bottom: 4em;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+                flex-direction: row;
+        -webkit-flex-wrap: wrap;
+                flex-wrap: wrap;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+                justify-content: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+                align-items: center; }
         @media (max-width: 900px) {
           .footer-wrap-outer .footer-wrap .footer-review-contact .footer-review {
             margin-bottom: 2em; } }
         .footer-wrap-outer .footer-wrap .footer-review-contact .footer-review a {
-          margin: 0 1.5em; }
+          padding: 0 1rem;
+          display: block;
+          width: 33.33%; }
           @media (max-width: 560px) {
             .footer-wrap-outer .footer-wrap .footer-review-contact .footer-review a {
               display: block;
               margin: 1.5em 0; } }
+          .footer-wrap-outer .footer-wrap .footer-review-contact .footer-review a img {
+            -webkit-filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(32deg) brightness(106%) contrast(106%);
+                    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(32deg) brightness(106%) contrast(106%); }
     .footer-wrap-outer .footer-wrap .footer-site-info {
       width: 100%;
       text-align: center;
@@ -1370,7 +1390,7 @@ input {
         font-weight: 300;
         font-size: 1rem; }
     .page-id-947 .review-platforms-conatiner .review-platforms {
-      max-width: 1440px;
+      max-width: 900px;
       margin: auto;
       display: -webkit-box;
       display: -webkit-flex;
@@ -1396,17 +1416,18 @@ input {
                   flex-direction: column;
           padding-top: 0; } }
       .page-id-947 .review-platforms-conatiner .review-platforms a {
-        margin: 0 2em;
-        -webkit-transform: scale(1.15);
-                transform: scale(1.15);
-        -webkit-filter: invert(75%) sepia(41%) saturate(2251%) hue-rotate(348deg) brightness(252%) contrast(101%);
-                filter: invert(75%) sepia(41%) saturate(2251%) hue-rotate(348deg) brightness(252%) contrast(101%); }
+        padding: 0 2rem;
+        display: block;
+        width: 25%;
+        -webkit-filter: invert(71%) sepia(96%) saturate(2309%) hue-rotate(346deg) brightness(102%) contrast(105%);
+                filter: invert(71%) sepia(96%) saturate(2309%) hue-rotate(346deg) brightness(102%) contrast(105%); }
         @media (max-width: 610px) {
           .page-id-947 .review-platforms-conatiner .review-platforms a {
-            margin: 1.5em 0; } }
+            margin: 1.5em 0;
+            padding: 0; } }
         .page-id-947 .review-platforms-conatiner .review-platforms a:hover {
-          -webkit-filter: invert(75%) sepia(41%) saturate(2251%) hue-rotate(348deg) brightness(202%) contrast(71%);
-                  filter: invert(75%) sepia(41%) saturate(2251%) hue-rotate(348deg) brightness(202%) contrast(71%); }
+          -webkit-filter: invert(53%) sepia(79%) saturate(1970%) hue-rotate(7deg) brightness(95%) contrast(101%);
+                  filter: invert(53%) sepia(79%) saturate(1970%) hue-rotate(7deg) brightness(95%) contrast(101%); }
     .page-id-947 .review-platforms-conatiner .footer-contact {
       font-size: 1.3em;
       margin-top: 1.5em; }
